Update Slovenian night-shift worker option text.

--- a/index.html
+++ b/index.html
@@ -2079,7 +2079,7 @@
                         situation: "Ste v pozno nočni kavarni in opazite utrujenega nočnega delavca, ki izgleda pod stresom. Poskuša študirati med delom.",
                         choices: [
                             {
-                                text: "Kupite mu kavo in ponudite spodbudo, morda pomagajte z vprašanjem, če lahko",
+                                text: "Kupite mu kavo in ponudite spodbudo, morda nagovorite z vprašanjem o njemu",
                                 compassion: 19,
                                 feedback: "Vaša gesta podpore pomeni svet zanj. Pokazali ste, da nekdo vidi njegovo trdo delo in skrbi. Majhna dejanja priznanja štejejo.",
                                 type: "positive"
