--- a/index.html
+++ b/index.html
@@ -803,6 +803,76 @@
         }
 
         @media (max-width: 768px) {
+            body {
+                padding: 10px;
+                align-items: flex-start;
+            }
+
+            .game-container {
+                padding: 18px;
+                border-radius: 14px;
+            }
+
+            /* Prevent language buttons overlapping the title */
+            .language-selector {
+                position: static;
+                justify-content: center;
+                margin-bottom: 10px;
+            }
+
+            h1 {
+                font-size: 1.8em;
+                margin-bottom: 8px;
+            }
+
+            .subtitle {
+                font-size: 0.95em;
+                margin-bottom: 18px;
+            }
+
+            .stats {
+                flex-wrap: wrap;
+                gap: 12px;
+                justify-content: space-between;
+                padding: 14px;
+                margin-bottom: 18px;
+            }
+
+            .stat-value {
+                font-size: 1.6em;
+            }
+
+            .scenario {
+                padding: 18px;
+                margin-bottom: 18px;
+            }
+
+            .scenario-text {
+                font-size: 1.05em;
+                line-height: 1.7;
+            }
+
+            .character {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 12px;
+            }
+
+            .character-avatar {
+                width: 64px;
+                height: 64px;
+                font-size: 1.7em;
+                margin-right: 0;
+            }
+
+            .tutorial, .self-compassion-section, .quiz-section, .game-over {
+                padding: 20px;
+            }
+
+            .tutorial-section, .exercise-description, .quiz-description {
+                padding: 18px;
+            }
+
             .quiz-container {
                 grid-template-columns: 1fr;
             }
