--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
         .character-avatar {
             width: 80px;
             height: 80px;
+            aspect-ratio: 1 / 1;
+            flex: 0 0 auto;
             border-radius: 50%;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             display: flex;
@@ -105,6 +107,12 @@
             margin-right: 20px;
             color: white;
             font-weight: bold;
+        }
+
+        /* If we ever use images/icons, avoid distortion */
+        img {
+            max-width: 100%;
+            height: auto;
         }
 
         .character-info h3 {
