Update Slovenian parent scenario option text

--- a/index.html
+++ b/index.html
@@ -1905,7 +1905,7 @@
                                 type: "positive"
                             },
                             {
-                                text: "Dajte jim razumevajoč nasmeh in nadaljujte",
+                                text: "Dajte staršu razumevajoč nasmeh in nadaljujte",
                                 compassion: 7,
                                 feedback: "Vaša prijaznost je opažena in cenjena, čeprav bi praktična pomoč morda bila bolj pomembna.",
                                 type: "neutral"
