Fix Slovenian compassion score label

--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
             sl: {
                 title: "❤️ Po poti sočutja",
                 subtitle: "Gradite empatijo skozi pomembne odločitve",
-                compassionScore: "Točka sočutja",
+                compassionScore: "Točke sočutja",
                 livesTouched: "Dotaknjena življenja",
                 scenario: "Scenarij",
                 exercises: "Vadbe",
