Center breathing exercise circle on mobile

--- a/index.html
+++ b/index.html
@@ -881,6 +881,15 @@
                 padding: 18px;
             }
 
+            /* Keep breathing circle centered on narrow screens */
+            .breathing-container {
+                width: 100%;
+                max-width: 300px;
+                aspect-ratio: 1 / 1;
+                height: auto;
+                margin: 20px auto;
+            }
+
             .quiz-container {
                 grid-template-columns: 1fr;
             }
