Use SVG progress ring for hold phase

--- a/index.html
+++ b/index.html
@@ -483,11 +483,8 @@
         .breathing-ring {
             position: absolute;
             inset: 0;
-            border-radius: 50%;
-            --p: 0deg;
-            background: conic-gradient(#9aa0a6 var(--p), rgba(154, 160, 166, 0.18) 0);
-            -webkit-mask: radial-gradient(farthest-side, transparent calc(100% - 10px), #000 calc(100% - 10px));
-            mask: radial-gradient(farthest-side, transparent calc(100% - 10px), #000 calc(100% - 10px));
+            width: 100%;
+            height: 100%;
             opacity: 0;
             transition: opacity 0.2s ease;
             z-index: 1;
@@ -496,6 +493,21 @@
 
         .breathing-ring.active {
             opacity: 1;
+        }
+
+        .breathing-ring-track {
+            stroke: rgba(154, 160, 166, 0.25);
+            stroke-width: 4;
+            fill: none;
+        }
+
+        .breathing-ring-progress {
+            stroke: #9aa0a6;
+            stroke-width: 4;
+            fill: none;
+            stroke-linecap: round;
+            transform: rotate(-90deg);
+            transform-origin: 50% 50%;
         }
 
         .breathing-circle {
@@ -2562,10 +2574,14 @@
         let currentSecond = 4;
 
         function setBreathingRingProgress(progress01) {
-            const ring = document.getElementById('breathingRing');
-            if (!ring) return;
+            const progressCircle = document.getElementById('breathingRingProgress');
+            if (!progressCircle) return;
+
             const clamped = Math.max(0, Math.min(1, progress01));
-            ring.style.setProperty('--p', `${clamped * 360}deg`);
+            const radius = 46;
+            const circumference = 2 * Math.PI * radius;
+            progressCircle.style.strokeDasharray = `${circumference}`;
+            progressCircle.style.strokeDashoffset = `${circumference * (1 - clamped)}`;
         }
 
         function setBreathingRingActive(active) {
@@ -2595,7 +2611,10 @@
             exerciseDiv.innerHTML = `
                 <h2>${t.breathingExerciseTitle}</h2>
                 <div class="breathing-container">
-                    <div class="breathing-ring" id="breathingRing" aria-hidden="true"></div>
+                    <svg class="breathing-ring" id="breathingRing" viewBox="0 0 100 100" aria-hidden="true">
+                        <circle class="breathing-ring-track" cx="50" cy="50" r="46"></circle>
+                        <circle class="breathing-ring-progress" id="breathingRingProgress" cx="50" cy="50" r="46"></circle>
+                    </svg>
                     <div class="breathing-circle" id="breathingCircle"></div>
                     <div class="breathing-counter" id="breathingCounter">4</div>
                 </div>
