--- a/index.html
+++ b/index.html
@@ -487,7 +487,8 @@
             height: 100%;
             opacity: 0;
             transition: opacity 0.2s ease;
-            z-index: 1;
+            /* Keep ring visible even when circle expands on small screens */
+            z-index: 3;
             pointer-events: none;
         }
 
