--- a/index.html
+++ b/index.html
@@ -871,11 +871,19 @@
             }
 
             .stats {
-                flex-wrap: wrap;
-                gap: 12px;
-                justify-content: space-between;
+                display: grid;
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+                gap: 14px 18px;
                 padding: 14px;
                 margin-bottom: 18px;
+            }
+
+            .stat-item {
+                width: 100%;
+            }
+
+            #quizStat {
+                grid-column: 1 / -1;
             }
 
             .stat-value {
