Update supportive touch description

--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
                 transitionToSelfCompassion: "Now, let's turn that compassion inward. It's time to practice self-compassion.",
                 selfCompassionPartTitle: "Self-Compassion Practice",
                 supportiveTouchTitle: "Supportive Touch",
-                supportiveTouchDescription: "Place a hand on your heart (or another comforting place) and take one slow breath. Notice what it feels like to offer yourself support.",
+                supportiveTouchDescription: "Place a hand on your heart and take a slow, deep breath. Notice what it feels like to offer yourself support.",
                 supportiveTouchActionBtn: "Place hand and breathe",
                 selfCompassionBreakTitle: "Self-Compassion Pause",
                 selfCompassionBreakStep1: "1) Notice: This is a moment of difficulty.",
@@ -1332,7 +1332,7 @@
                 transitionToSelfCompassion: "Zdaj pa obrnimo to sočutje navznoter. Čas je za vadbo samosočutja.",
                 selfCompassionPartTitle: "Vadba samosočutja",
                 supportiveTouchTitle: "Podporen dotik",
-                supportiveTouchDescription: "Položite roko na srce (ali drug prijeten del telesa) in naredite en počasen vdih. Opazite, kako je, ko si ponudite podporo.",
+                supportiveTouchDescription: "Položite roko na srce in naredite počasen, globok vdih. Opazite, kako je, ko si ponudite podporo.",
                 supportiveTouchActionBtn: "Položi roko in vdihni",
                 selfCompassionBreakTitle: "Samosočutni premor",
                 selfCompassionBreakStep1: "1) Opazim: To je težek trenutek.",
