Fix scenarios and update Slovene texts

--- a/index.html
+++ b/index.html
@@ -2243,31 +2243,6 @@
                         ]
                     },
                     {
-                        character: "🌧️",
-                        name: "Brezdomec",
-                        situation: "Obidete nekoga, ki izgleda kot brezdomec, ki sedi na dežju. Ne prosi za nič, le poskuša ostati suh.",
-                        choices: [
-                            {
-                                text: "Ponudite, da mu kupite topel obrok in poiščete informacije o zavetišču",
-                                compassion: 25,
-                                feedback: "Vaša iskrena skrb in praktična pomoč obnovi njegovo upanje. Obravnavali ste ga z dostojanstvom in spoštovanjem. To je resnično sočutje.",
-                                type: "positive"
-                            },
-                            {
-                                text: "Dajte mu nekaj drobiža",
-                                compassion: 10,
-                                feedback: "Vaša velikodušnost pomaga, vendar morda potrebujejo več kot denar. Kljub temu vsako dejanje prijaznosti šteje.",
-                                type: "neutral"
-                            },
-                            {
-                                text: "Hitro prečite mimo, negotovi, kaj storiti",
-                                compassion: -2,
-                                feedback: "Počutili ste se neudobno, kar je razumljivo. Vendar včasih je najbolj sočutna stvar priznati človekovo človečnost.",
-                                type: "negative"
-                            }
-                        ]
-                    },
-                    {
                         character: "💔",
                         name: "Prijatelj v težavah",
                         situation: "Bližnji prijatelj preživlja težko ločitev in zadnje čase si ni podoben. Preklaplja načrte.",
@@ -2650,7 +2625,7 @@
                             {
                                 text: "Osebi, ki se pritožuje priznate frustracijo in nežno predlagate, naj se osredotoči na to, kar lahko med čakanjem nadzira",
                                 compassion: 18,
-                                feedback: "Dali ste prostor čustvom, ne da bi podprli nespoštovanje. Včasih strah, bolečina ali negotovost pridejo ven kot razdražljivost. Sočutje je lahko toplina in struktura - pomagate umiriti prostor brez sramotenja.",
+                                feedback: "Dali ste prostor čustvom, ne da bi podprli nespoštovanje. Včasih strah, bolečina ali negotovost pridejo ven kot razdražljivost. Sočutje je lahko toplina in struktura—pomagate umiriti prostor brez sramotenja.",
                                 type: "positive"
                             },
                             {
@@ -2704,7 +2679,7 @@
                                 type: "positive"
                             },
                             {
-                                text: "Izogibate se ji in poskušate biti tišji, brez pogovora",
+                                text: "Izogibate se ji in poskusite biti tišji, brez pogovora",
                                 compassion: 6,
                                 feedback: "Zmanjšali ste vpliv, a odnos ostane napet. Umik lahko kratkoročno zaščiti, a tudi ohranja tesnobo. Včasih sočutje pomeni jasno, mirno komunikacijo.",
                                 type: "neutral"
@@ -2731,7 +2706,7 @@
                             {
                                 text: "Odpišete »ok« in se umaknete, brez vprašanj",
                                 compassion: 6,
-                                feedback: "Zaščitili ste se. A domneve se lahko hitro utrdijo. Sočutje je včasih preprosto vprašanje, ki pusti vrata odprta—če imate kapaciteto.",
+                                feedback: "Zaščitili ste se. A domneve se lahko hitro utrdijo. Sočutje je včasih preprosto vprašanje, ki pusti vrata odprta - če imate kapaciteto.",
                                 type: "neutral"
                             },
                             {
@@ -2775,13 +2750,13 @@
                             {
                                 text: "Ostanete potrpežljivi in, če je primerno, nežno ustavite komentarje ali ponudite preprosto podporo",
                                 compassion: 20,
-                                feedback: "Spomnili ste se, da imajo zamude pogosto nevidne razloge—zdravje, tesnobo, invalidnost ali jezikovne ovire. Sočutje tu pomeni ne iti z množico v razčlovečenje, ampak izbrati potrpežljivost in spoštovanje.",
+                                feedback: "Spomnili ste se, da imajo zamude pogosto nevidne razloge - zdravje, tesnobo, mobilne ali jezikovne ovire. Sočutje tu pomeni ne iti z množico v razčlovečenje, ampak izbrati potrpežljivost in spoštovanje.",
                                 type: "positive"
                             },
                             {
                                 text: "Ne rečete nič, a poskusite svojo nestrpnost obdržati zase",
-                                compassion: 7,
-                                feedback: "Niste dodali škode, kar je pomembno. Včasih je tišina najvarnejša izbira. Če zmorete, lahko že majhna gesta—pogled, nevtralna drža—sporoči človečnost brez konfrontacije.",
+                                compassion: 6,
+                                feedback: "Niste dodali škode, kar je pomembno. Včasih je tišina najvarnejša izbira. Če zmorete, lahko že majhna gesta - pogled, nevtralna drža - sporoči človečnost brez konfrontacije.",
                                 type: "neutral"
                             },
                             {
