Preimenuj scenarij v 'Zaseden ploÄŤnik'

--- a/index.html
+++ b/index.html
@@ -2644,7 +2644,7 @@
                     },
                     {
                         character: "🚶",
-                        name: "Zamašen pločnik",
+                        name: "Zaseden pločnik",
                         situation: "Mudi se vam, pred vami pa nekdo hodi zelo počasi in zavzema večino pločnika. Začutite nestrpnost in sodbe.",
                         choices: [
                             {
