Posodobi besedilo vaje: nekaj, kar cenim pri sebi

--- a/index.html
+++ b/index.html
@@ -1351,8 +1351,8 @@
                 innerCriticOption1: "Delam, kolikor zmorem — korak za korakom.",
                 innerCriticOption2: "V redu je, če počivam — počitek mi pomaga nadaljevati.",
                 innerCriticOption3: "Lahko sem nepopolna/nepopoln in še vedno vredna/vreden.",
-                microGratitudeSelfTitle: "Ena stvar, ki jo cenim pri sebi",
-                microGratitudeSelfDescription: "Zapiši eno majhno stvar, ki jo danes ceniš pri sebi. Lahko je čisto preprosta.",
+                microGratitudeSelfTitle: "Nekaj, kar cenim pri sebi",
+                microGratitudeSelfDescription: "Zapišite nekaj, kar cenite pri sebi. Lahko gre za nekaj povsem preprostega, nekaj pozitivnega, kar danes opazite pri sebi",
                 microGratitudeSelfPlaceholder: "Danes cenim pri sebi, da ...",
                 microGratitudeSelfContinueBtn: "Nadaljuj",
                 letterExerciseTitle: "Napišite pismo samemu sebi",
