Posodobi scenarij: Izmenjava daril (SL)

--- a/index.html
+++ b/index.html
@@ -2473,21 +2473,21 @@
                         situation: "Med izmenjavo daril nekdo prejme darilo, ki očitno ni po njegovem okusu. Poskuša biti vljuden, vendar izgleda razočaran.",
                         choices: [
                             {
-                                text: "Kasneje zasebno ponudite menjavo ali pomagajte najti nekaj, kar bi dejansko uživali, pri čemer pokažete, da ste opazili",
+                                text: "Kasneje zasebno ponudite menjavo ali pomagajte najti nekaj, kar bi osebo dejansko razveselilo, pri čemer izkažete, da ste opazili, kako se oseba počuti",
                                 compassion: 17,
-                                feedback: "Vaša premišljenost in diskrecija kažeta resnično skrb. Spremenili ste trenutek razočaranja v pozitivno izkušnjo, pri čemer spoštujete občutke drugih.",
+                                feedback: "Vaša premišljenost in diskrecija kažeta resnično skrbnost. Spremenili ste trenutek razočaranja v pozitivno izkušnjo, in to s spoštovanjem občutkov drugih.",
                                 type: "positive"
                             },
                             {
                                 text: "Naredite šalo, da razbremenite vzdušje",
                                 compassion: 5,
-                                feedback: "Poskušali ste pomagati, vendar humor morda ne obravnava njegovega dejanskega razočaranja. Včasih ljudje potrebujejo praktično pomoč, ne šale.",
+                                feedback: "Poskušali ste pomagati, vendar humor morda ne obravnava dejanskega razočaranja osebe. Včasih ljudje potrebujejo praktično pomoč, ne šale.",
                                 type: "neutral"
                             },
                             {
                                 text: "Ignorirajte to in predpostavite, da bo vse v redu",
                                 compassion: -2,
-                                feedback: "Niste želeli narediti neprijetno, vendar včasih je najbolj sočutna stvar opaziti in pomagati, tudi tiho.",
+                                feedback: "Niste želeli narediti situacijo še bolj neprijetno, vendar je včasih najbolj sočutna stvar opaziti in človeku diskretno pomagati.",
                                 type: "negative"
                             }
                         ]
