Posodobi naslov: Pasivno-agresivna soseda

--- a/index.html
+++ b/index.html
@@ -2669,7 +2669,7 @@
                     },
                     {
                         character: "🏠",
-                        name: "Pasivno-agresiven sosed",
+                        name: "Pasivno-agresivna soseda",
                         situation: "Soseda vam pusti listek, da ste menda zaradi hrupa neuvidevni. Ton je pasivno-agresiven in počutite se obtožene.",
                         choices: [
                             {
