Posodobi zakljuÄŤno sporoÄŤilo (SL)

--- a/index.html
+++ b/index.html
@@ -1382,7 +1382,7 @@
                     exceptional: (score, lives) => `🌟 Izjemno! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Resnično razumete, kaj pomeni biti sočuten in skrbeti za človeštvo.`,
                     wonderful: (score, lives) => `✨ Čudovito! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Vaša prijaznost naredi resnično razliko.`,
                     good: (score, lives) => `👍 Dobro delo! Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Nadaljujte z vadbo empatije in prijaznosti.`,
-                    default: (score, lives) => `💭 Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Ne pozabite, vsako dejanje prijaznosti šteje—tudi majhna.`
+                    default: (score, lives) => `💭 Vaša točka sočutja je ${score}. Dotaknili ste se ${lives} življenj. Ne pozabite, vsako dejanje prijaznosti šteje - tudi majhne pozornosti.`
                 }
             }
         };
